--- a/annexe.css
+++ b/annexe.css
@@ -363,7 +363,7 @@ body{
     justify-content: center;
     padding-top: 50px;
     width: 100%;
-    max-width: 1900px;
+    max-width: 100vw;
     margin: auto;
     background-color: #f0f0f0;
 }
@@ -383,211 +383,6 @@ body{
         padding-top: 0px;        
     }
 }
-
-
-
-.slider2-wrapper{
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    min-height: 200px;
-    overflow: auto;
-    width: 100%;
-    max-width: 1980px;
-    margin: auto;
-    padding-bottom: 100px;
-    background-color: #f0f0f0;
-}
-.swiper-button-next{
-    z-index: 9;
-}
-.textslide {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    height: 430px;
-    width: 100%;
-    margin-top: 40px;
-    cursor: pointer;
-    margin-left: 10px;
-}
-.slider2-wrapper .textslide a img{
-    height: 320px;
-    width: auto;
-    margin: auto;
-}
-
-#textslide1, #textslide2, #textslide3, #textslide4, #textslide5, #textslide6, #textslide7, #textslide8, #textslide9, #textslide10, #textslide11, #textslide12, #textslide13,#textslide14, #textslide15, #textslide16  {
-    display: block;
-    align-items: center;
-    left: 50%;
-    padding-bottom: 10px;
-}
-
-.slider2-wrapper .textslide h1{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 26.2px;
-    font-weight: 500;
-    font-style: normal;
-    line-height: 0.8;
-    color: black;
-}
-#textslide10 h1{
-    display: block;
-    align-items: center;
-    margin-left: -10px;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 26.2px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 0.8;
-    color: black;
-    text-align: end;
-    max-width: 290px;
-    margin-bottom: -22px;
-}
-
-#textslide1 h2, #textslide2 h2, #textslide3 h2, #textslide4 h2, #textslide5 h2, #textslide6 h2, #textslide7 h2, #textslide8 h2, #textslide9 h2, #textslide10 h2, #textslide11 h2, #textslide12 h2, #textslide13 h2, #textslide14 h2, #textslide15 h2, #textslide16 h2{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    font-style: normal;
-}
-#textslide1 h3, #textslide2 h3, #textslide3 h3, #textslide4 h3, #textslide5 h3, #textslide6 h3, #textslide7 h3, #textslide8 h3, #textslide9 h3, #textslide10 h3, #textslide11 h3, #textslide12 h3, #textslide13 h3, #textslide14 h3, #textslide15 h3, #textslide16 h3{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    font-style: normal;
-    margin-top: 5px;
-}
-#textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide8 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 125px;
-}
-
-#textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide8 h4 {
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 125px;
-}
-
-#textslide6 h4, #textslide7 h4,  #textslide9 h4, #textslide10 h4, #textslide11 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 73px;    
-}
-
-#textslide12 h4, #textslide13 h4, #textslide14 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 83px; 
-}
-
-#textslide15 h4, #textslide16 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 90px; 
-}
-@media screen and (max-width:1200) {
-    
-    #textslide10 h1{
-        font-size: 19px;
-    }
-}
-@media screen and (max-width: 790px) {
-    .textslide {
-        height: 350px;
-    }
-    .slider2-wrapper .textslide a img{
-        height: 250px;
-    }
-    .slider2-wrapper .textslide h1{
-        font-size: 18px;
-    }
-    #textslide10 h1{
-        margin-left: -5px;
-        font-size: 17px;
-        max-width: 190px;
-        margin-bottom: -13px;
-    }
-    #textslide1 h2, #textslide2 h2, #textslide3 h2, #textslide4 h2, #textslide5 h2, #textslide6 h2, #textslide7 h2, #textslide8 h2, #textslide9 h2, #textslide10 h2, #textslide11 h2, #textslide12 h2, #textslide13 h2, #textslide14 h2, #textslide15 h2, #textslide16 h2{
-        font-size: 12px;
-    }
-    #textslide1 h3, #textslide2 h3, #textslide3 h3, #textslide4 h3, #textslide5 h3, #textslide6 h3, #textslide7 h3, #textslide8 h3, #textslide9 h3, #textslide10 h3, #textslide11 h3, #textslide12 h3, #textslide13 h3, #textslide14 h3, #textslide15 h3, #textslide16 h3{
-        font-size: 11px;
-    }
-    #textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide8 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
-        font-size: 10px;
-    }
-    
-    #textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide8 h4 {
-        font-size: 10px;
-        width: 105px;
-    }
-    
-    #textslide6 h4, #textslide7 h4,  #textslide9 h4, #textslide10 h4, #textslide11 h4{
-        font-size: 10px;
-        width: 63px;    
-    }
-    
-    #textslide12 h4, #textslide13 h4, #textslide14 h4{
-        font-size: 10px;
-        width: 72px; 
-    }
-    
-    #textslide15 h4, #textslide16 h4{
-        font-size: 10px;
-        width:75px; 
-    }
-}
-
 footer {
     background-color: black;
     padding: 20px 30px 15px;
