--- a/styleProjetos.css
+++ b/styleProjetos.css
@@ -165,7 +165,9 @@
     margin-top:100px;
     column-gap:1.5vw
     }
-    
+    .container2 h3, .container1 h1{
+        max-width: 300px;
+    }
     .container2,.container4,.container6 {
     display:flex;
     align-items:center;
