--- a/styleProjetos.css
+++ b/styleProjetos.css
@@ -286,11 +286,15 @@
     .container {
     margin-top:50px
     }
-    
+    .container div{
+        width: 100%;
+        max-width: 90vw;
+    }
     .container1,.container3,.container5,.container7,.container8 {
     display:flex;
     flex-direction:column;
     align-items:center;
+    justify-content: center;
     width:100%;
     max-width:900px;
     margin:auto;
@@ -329,7 +333,10 @@
     @media screen and (max-width: 580px) {
     .card1 img,.card2 img,.card3 img,.card4 img,.card5 img,.card5 img,.card6 img,.card7 img,.card8 img,.card9 img,.card10 img,.card11 img,.card12 img,.card13 img,.card14 img,.card15 img,.card16 img {
     height:350px;
-    max-height:100%
+    max-height:100%;
+    object-fit: cover;
+    width: 100%;
+    max-width: 100%;
     }
     }
     
