ajustes (atelieLV edificacao nova => interiores, ordem depoimentos) e melhora dos slides home

--- a/css/slider.css
+++ b/css/slider.css
@@ -102,7 +102,7 @@ swiper-slide{
 #textslide18 h3, #textslide17 h3{
     font-size: 12px;
 }
-#textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide8 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
+#textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
     padding: 5px;
     font-size: 12px;
     font-weight: 700;
@@ -134,7 +134,7 @@ swiper-slide{
     border-radius: 20px;
     width: 83px; 
 }
-#textslide15 h4, #textslide16 h4, #textslide17 h4, #textslide18 h4, #textslide19 h4{
+#textslide15 h4, #textslide16 h4, #textslide17 h4, #textslide18 h4, #textslide19 h4, #textslide8 h4{
     padding: 5px;
     font-size: 12px;
     font-weight: 700;
