--- a/casajc66.css
+++ b/casajc66.css
@@ -288,7 +288,12 @@ body{
 .slider1-nav a:hover{
     opacity: 1;
     background-color: #FFF;
-    cursor: pointer;
+    cursor:pointer
+}
+/* ativo */
+.dot2.active {
+    background-color: #fff; /* cor do dot selecionado */
+    opacity: 1;
 }
 .container-slider{
     display: flex;
