--- a/pousadasabinaeaqua.css
+++ b/pousadasabinaeaqua.css
@@ -233,7 +233,12 @@ body{
 .slider2-nav a:hover{
     opacity: 1;
     background-color: #FFF;
-    cursor: pointer;
+    cursor:pointer
+}
+/* ativo */
+.dot2.active {
+    background-color: #fff; /* cor do dot selecionado */
+    opacity: 1;
 }
 .slider.dragging .slider-img{
     cursor: grab;
