--- a/slidesprojstyle.css
+++ b/slidesprojstyle.css
@@ -52,7 +52,12 @@
 .slider1-nav a:hover{
     opacity: 1;
     background-color: #FFF;
-    cursor: pointer;
+    cursor:pointer
+}
+/* ativo */
+.dot2.active {
+    background-color: #fff; /* cor do dot selecionado */
+    opacity: 1;
 }
 .container-slider{
     display: flex;
