--- a/pousadasabinaeaqua.css
+++ b/pousadasabinaeaqua.css
@@ -107,7 +107,7 @@ body{
     padding: 70px 30px 80px 0;
     margin-top: 10px;
 }
-.title{
+.title, .title h1{
     display: flex;
     text-align: left;
     align-items: end;
@@ -187,6 +187,7 @@ body{
 }
 .frame1{
     display: flex;
+    width: 100%;
     flex-direction: column;
     gap: 56px;
 }
