--- a/slopeskisnowboardclub.css
+++ b/slopeskisnowboardclub.css
@@ -19,31 +19,36 @@ body{
     background: #FFF;
     font-family: Arial, Helvetica, sans-serif;
 }
-.sobreds{
+.sobresssbc h1{
+    text-transform: uppercase;
+    font-size: 120px;
+}
+.sobresssbc{
     padding-bottom: 50px;
 }
-.aboutds{
+.aboutsssbc{
     margin-bottom: 0;
 }
-.aboutds h2{
-    width: 210px;
+.aboutsssbc h2{
+    width: 180px;
     padding-right: 0;
 }
-.aboutds p{
-    width: 378px;
+.aboutsssbc p{
+    width: 225px;
     margin-top: 15px;
 }
-.aboutds h3{
+.aboutsssbc h3{
     font-weight: bold;
     font-size: 14px;
     text-transform:uppercase;
     margin-top: 20px;
 }
-.aboutds h5{
+.aboutsssbc h5{
+    width: 227px;
     text-transform:uppercase;
 }
 @media screen and (max-width: 500px) {
-    .aboutds p{
+    .aboutsssbc p{
         width: 220px;
     }    
 }
