--- a/slopeskisnowboardclub.css
+++ b/slopeskisnowboardclub.css
@@ -51,6 +51,10 @@ body{
     text-transform:uppercase;
 }
 @media screen and (max-width: 500px) {
+    .sobresssbc h1{
+        font-size: 48px;
+        white-space: nowrap;
+    }
     .aboutsssbc p{
         width: 220px;
     }    
