--- a/casabp.css
+++ b/casabp.css
@@ -323,6 +323,9 @@ body{
         max-width: 200px;
         margin: auto;
     }
+    #arrowSlider1{
+        font-size: 30px;
+    }
     #arrowSlider1:first-child{
         left: 0;
     }
@@ -464,6 +467,9 @@ body{
     .container3-slider{
         width: 200px;
         height: 400px;
+    }
+    #arrowSlider3{
+        font-size: 30px;
     }
 }
 
