--- a/casads.css
+++ b/casads.css
@@ -19,11 +19,30 @@ body{
     background: #FFF;
     font-family: Arial, Helvetica, sans-serif;
 }
+img{object-fit: cover;width: 100%;}
+.title, .title h1{
+    display: flex;
+    text-align: left;
+    align-items: end;
+    justify-content: start;
+    width: 100%;
+    max-width: 1190px;
+    font-size: 130px;
+    font-weight: 400;
+    line-height: 0.8;
+}
 .sobreds{
     padding-bottom: 50px;
 }
 .aboutds{
     margin-bottom: 0;
+}
+.about{
+    font-family: 'Neue';
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #000;
+    padding-bottom: 40px;
 }
 .aboutds h2{
     width: 210px;
@@ -44,6 +63,71 @@ body{
 }
 @media screen and (max-width: 500px) {
     .aboutds p{
-        width: 220px;
-    }    
+        width: 100%;
+    }   
+    .sobre{
+        padding: 0 20px;
+        margin-bottom: 50px;
+    }
+    .title{
+        font-size: 60px;
+        font-weight: 400;
+        line-height: 0.8;
+        margin-bottom: 20px;
+    } 
+}
+.container-slider{
+    max-width: 800px;
+    padding-top: 40px;
+}
+.frame1{
+    margin-bottom: -40px;
+}
+.frame3ampli{
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+    margin: auto;
+    padding: 5vw 20vw;
+}
+.frame3ampli img{
+    max-width: 100%;
+    height: 520px;
+}
+.container3-slider{
+    display: flex;
+    justify-content: center;
+    padding: 2vw 0;
+    margin: auto;
+    background-color: #FFF;
+}
+.item img{
+    object-fit: contain;
+    background-color: #FFF;
+}
+.teml img{
+    height: 99%;
+}
+#arrowSlider3{
+    font-size: 40px;
+}
+.prev3{  
+    left: 13%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.next3{  
+    right: 13%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+@media screen and (max-width: 1020px) {
+    .frame3ampli{
+        flex-direction: column;
+        padding: 5vw 25vw;
+        gap: 5px;
+    }
+    .frame3ampli img{
+        height: 100%;
+    }
 }
