ssssbc css mobile

--- a/slopeskisnowboardclub.css
+++ b/slopeskisnowboardclub.css
@@ -70,4 +70,7 @@ body{
         padding: 0 10vw 5vw;
         gap: 25px !important;
     }
+    .frame2sssbc{
+        padding: 25px 10vw;
+    }
 }
