--- a/casads.css
+++ b/casads.css
@@ -106,7 +106,7 @@ img{object-fit: cover;width: 100%;}
     background-color: #FFF;
 }
 .teml img{
-    height: 99%;
+    max-height: 600px;
 }
 #arrowSlider3{
     font-size: 40px;
