--- a/casabp.css
+++ b/casabp.css
@@ -481,6 +481,7 @@ body{
     max-width: 100vw;
     margin: auto;
     background-color: #f0f0f0;
+    margin-top: 40px;
 }
 .outros p{
     display: flex;
